# MTCNN-C-

./: .gitignore  CMakeLists.txt  README.md
include/: Camera.h  Facenet.h  utils.h
src/: Camera.cpp  Facenet.cpp  detector.cpp  main.cpp  onet.cpp  pnet.cpp  rnet.cpp
test/dataset/: label.txt
